fixing a bug where the wrong constructor was being called